amazon-chart/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: oggy-web-service
  namespace: oggy

spec:
  type: NodePort
  selector:
    app: oggy-web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30007
